# lab_sem2

./: README.md
Projekt/app/: CMakeLists.txt  adjuvant_functions.c  adjuvant_functions.h  buffer_operations.c  buffer_operations.h  data_structures.h  file_operations.c  file_operations.h  list_operations.c  list_operations.h  main.c  makefile  menu_handler.c  menu_handler.h
lab1/: CMakeLists.txt  funkcje.c  funkcje.h  main.c
lab2/: CMakeLists.txt  deklaracje.h  funkcje.c  main.c
lab3/analityk/: CMakeLists.txt  main.c
lab3/generator/: CMakeLists.txt  main.c
lab3/zad1/: main.c
lab4/: main.c
lab5/: main.c
